--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,38 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@theme {
+--animate-gradient: text-gradient 1.5s linear infinite;
+--animate-background-shine: background-shine 2s linear infinite;
+--animate-pulse-slow: pulse-slow 6s infinite cubic-bezier(0.4, 0, 0.6, 1);
+--animate-border-width: border-width 3s infinite alternate;
+
+@keyframes text-gradient {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: 200% center;
+    }
+}
+
+@keyframes background-shine {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: -200% 0;
+    }
+}
+
+@keyframes border-width {
+    from {
+        width: 10px;
+        opacity: 0;
+    }
+    to {
+        width: 100px;
+        opacity: 1;
+    }
+}
+}
+
